[gd_scene load_steps=29 format=2]

[ext_resource path="res://assests/skeleton spritesheet calciumtrice.png" type="Texture" id=1]
[ext_resource path="res://enemies/skeleton_bck.gd" type="Script" id=2]
[ext_resource path="res://assests/ui/healthbar/VIDA_0.png" type="Texture" id=3]
[ext_resource path="res://assests/ui/healthbar/VIDA_10.png" type="Texture" id=4]
[ext_resource path="res://enemies/skeletonAttackRange.gd" type="Script" id=5]



[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 32, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 64, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 96, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 128, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 160, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 192, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 224, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 256, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 288, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 32, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 64, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 96, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=15]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 128, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=16]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 160, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=17]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 192, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=18]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 224, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=19]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 256, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=20]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 288, 64, 32, 32 )

[sub_resource type="SpriteFrames" id=21]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ) ],
"loop": true,
"name": "walking",
"speed": 10.0
} ]

[sub_resource type="CapsuleShape2D" id=22]
radius = 9.00562
height = 17.0323

[sub_resource type="CircleShape2D" id=23]
radius = 133.787

[node name="Node2D" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 21 )
animation = "walking"
frame = 3
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="." groups=[
"enemy",
]]
position = Vector2( 0, 0.794601 )
shape = SubResource( 22 )

[node name="AttackRange" type="Area2D" parent="."]
script = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackRange"]
shape = SubResource( 23 )

[node name="takeDamageRange" type="Area2D" parent="." groups=[
"enemy",
]]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="takeDamageRange"]
position = Vector2( 0, 0.794601 )
shape = SubResource( 22 )

[node name="healthBar" type="TextureProgress" parent="."]
margin_left = -10.1131
margin_top = -22.3587
margin_right = 367.887
margin_bottom = 17.6413
rect_scale = Vector2( 0.0556537, 0.0866251 )
value = 100.0
texture_under = ExtResource( 3 )
texture_progress = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="area_entered" from="AttackRange" to="." method="_on_AttackRange_area_entered"]
[connection signal="area_exited" from="AttackRange" to="." method="_on_AttackRange_area_exited"]
